# fastapi-auth-service

./: .gitignore  LICENSE  Makefile  README.txt  config.py  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  database.py  events.py  main.py  mixins.py  settings.py
app/admin/: router.py
app/auth/: router.py  schemas.py  utils.py
app/tasks/: __init__.py  celery.py  email_utils.py  router.py  templates.py
app/user/: models.py  router.py  schemas.py  utils.py
tests/: conftest.py  parametrize_data.py
tests/test_auth_routes/: test_login_jwt.py  test_user_verify.py
tests/test_user_routes/: test_user_create.py  test_user_update.py
