[tool.poetry]
name = "trying"
version = "0.1.0"
description = "None"
authors = ["Vino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pyjwt = "^2.8.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
black = "^24.3.0"
bcrypt = "^4.1.2"
passlib = "^1.7.4"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.4.0"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
